🚨 fixing docs build error

--- a/docs/docs/api/client/typescript/api/classes/gamium-client.mdx
+++ b/docs/docs/api/client/typescript/api/classes/gamium-client.mdx
@@ -67,11 +67,11 @@ await gamium.executeRpc(RpcBy.method('Namespace', 'FunctionName', params));
 
 - locator [`RpcLocator`](../types/rpc-locator) <s generated />
 
-- option [`Partial`](https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`ExecuteRpcOptions`](../types/execute-rpc-options)> <s generated />
+- option [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`ExecuteRpcOptions`](../types/execute-rpc-options)> <s generated />
 
 ##### Returns <s generated />
 
-- [`Promise`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`undefined`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined) | [`number`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) | [`string`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) | [`object`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object)> <s generated />
+- [`Promise`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`undefined`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined) | [`number`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number) | [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) | [`object`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object)> <s generated />
 
 <hr class="solid" /> <s generated />
 
@@ -94,11 +94,11 @@ const cameraObj = await gamium.find(By.path('Object path'));
 
 - locator [`Locator`](../types/locator) <s generated />
 
-- options [`Partial`](https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`](../types/find-object-options)> <s generated />
+- options [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`](../types/find-object-options)> <s generated />
 
 ##### Returns <s generated />
 
-- [`Promise`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`ObjectInfo`](../types/object-info)> <s generated />
+- [`Promise`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`ObjectInfo`](../types/object-info)> <s generated />
 
 <hr class="solid" /> <s generated />
 
@@ -123,11 +123,11 @@ A [GamiumError] (Gamium-error) of the code [ObjectNotFound] (../enums/error-code
 
 - locator [`Locator`](../types/locator) <s generated />
 
-- options [`Partial`](https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`](../types/find-object-options)> <s generated />
+- options [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`](../types/find-object-options)> <s generated />
 
 ##### Returns <s generated />
 
-- [`Promise`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`ObjectInfo`](object-info)[]> <s generated />
+- [`Promise`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`ObjectInfo`](../types/object-info)[]> <s generated />
 
 <hr class="solid" /> <s generated />
 
@@ -151,11 +151,11 @@ const player = await gamium.player(By.path('Object path'));
 
 - locator [`Locator`](../types/locator) <s generated />
 
-- options [`Partial`](https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`](../types/find-object-options)> <s generated />
+- options [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`](../types/find-object-options)> <s generated />
 
 ##### Returns <s generated />
 
-- [`Promise`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`Player`](player)> <s generated />
+- [`Promise`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`Player`](player)> <s generated />
 
 <hr class="solid" /> <s generated />
 
@@ -170,7 +170,7 @@ Collect performance indicators within the game. Returns the performance indicato
 
 ##### Returns <s generated />
 
-- [`Promise`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`QueryProfileResult`](../types/query-profile-result)> <s generated />
+- [`Promise`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`QueryProfileResult`](../types/query-profile-result)> <s generated />
 
 <hr class="solid" /> <s generated />
 
@@ -191,7 +191,7 @@ const screen = await gamium.screen();
 
 ##### Returns <s generated />
 
-- [`Promise`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`QueryScreenResult`](../types/query-screen-result)> <s generated />
+- [`Promise`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`QueryScreenResult`](../types/query-screen-result)> <s generated />
 
 <hr class="solid" /> <s generated />
 
@@ -202,7 +202,7 @@ const screen = await gamium.screen();
   children="public"
 /> <s generated />
 
-Enter the key that corresponds to [`KeyBy`](key-by). You can check how to use it in [`Control The Game`](gmaium/client/typescript/game-control).
+Enter the key that corresponds to [`KeyBy`](key-by). You can check how to use it in [`Control The Game`](gamium/client/typescript/game-control).
 
 ##### Usage
 
@@ -214,11 +214,11 @@ await gamium.sendKey(KeyBy.unityKeycode('E'));
 
 - by [`KeyBy`](key-by) <s generated />
 
-- options [`Partial`](https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`SendKeyOptions`](../types/send-key-options)> <s generated />
+- options [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`SendKeyOptions`](../types/send-key-options)> <s generated />
 
 ##### Returns <s generated />
 
-- [`Promise`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`void`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined)> <s generated />
+- [`Promise`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)< [`void`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined)> <s generated />
 
 <hr class="solid" /> <s generated />
 
@@ -243,11 +243,11 @@ await gamium.sendKeys([KeyBy.unityKeycode('W'), KeyBy.unityKeycode('D')], {
 
 - byList [`KeyBy`](key-by)[] <s generated />
 
-- options [`Partial`](https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`SendKeyOptions`](../types/send-key-options)> <s generated />
+- options [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`SendKeyOptions`](../types/send-key-options)> <s generated />
 
 ##### Returns <s generated />
 
-- [`Promise`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`void`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined)> <s generated />
+- [`Promise`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`void`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined)> <s generated />
 
 <hr class="solid" /> <s generated />
 
@@ -262,11 +262,11 @@ await gamium.sendKeys([KeyBy.unityKeycode('W'), KeyBy.unityKeycode('D')], {
 
 - locator [`Locator`](../types/locator) <s generated />
 
-- options [`Partial`](https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`](../types/find-object-options)> <s generated />
+- options [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`](../types/find-object-options)> <s generated />
 
 ##### Returns <s generated />
 
-- [`Promise`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<`TryResult`<[`ObjectInfo`](object-info)>> <s generated />
+- [`Promise`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<`TryResult`<[`ObjectInfo`](../types/object-info)>> <s generated />
 
 <hr class="solid" /> <s generated />
 
@@ -281,11 +281,11 @@ await gamium.sendKeys([KeyBy.unityKeycode('W'), KeyBy.unityKeycode('D')], {
 
 - locator [`Locator`](../types/locator) <s generated />
 
-- options [`Partial`](https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`](../types/find-object-options)> <s generated />
+- options [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`FindObjectOptions`](../types/find-object-options)> <s generated />
 
 ##### Returns <s generated />
 
-- [`Promise`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<`TryResult`<[`ObjectInfo`](object-info)[]>> <s generated />
+- [`Promise`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<`TryResult`<[`ObjectInfo`](../types/object-info)[]>> <s generated />
 
 <hr class="solid" /> <s generated />
 
@@ -311,13 +311,13 @@ if (buttonInfoOrError instanceof GamiumError) {
 
 ##### Arguments <s generated />
 
-- condition `WaitCondition`<[`Type`](https://www.typescriptlang.org/docs/handbook/2/generics.html)> <s generated />
+- condition `WaitCondition`<[`Type`]( https://www.typescriptlang.org/docs/handbook/2/generics.html)> <s generated />
 
-- option [`Partial`](https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`WaitOptions`](../types/wait-options)> <s generated />
+- option [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`WaitOptions`](../types/wait-options)> <s generated />
 
 ##### Returns <s generated />
 
-- [`Promise`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<`TryResult`<[`Type`](https://www.typescriptlang.org/docs/handbook/2/generics.html)>> <s generated />
+- [`Promise`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<`TryResult`<[`Type`]( https://www.typescriptlang.org/docs/handbook/2/generics.html)>> <s generated />
 
 <hr class="solid" /> <s generated />
 
@@ -361,12 +361,12 @@ const buttonInfo = await gamium.wait(
 
 ##### Arguments <s generated />
 
-- condition `WaitCondition`<[`Type`](https://www.typescriptlang.org/docs/handbook/2/generics.html)> <s generated />
+- condition `WaitCondition`<[`Type`]( https://www.typescriptlang.org/docs/handbook/2/generics.html)> <s generated />
 
-- option [`Partial`](https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`WaitOptions`](../types/wait-options)> <s generated />
+- option [`Partial`]( https://www.typescriptlang.org/docs/handbook/utility-types.html#partialtype)<[`WaitOptions`](../types/wait-options)> <s generated />
 
 ##### Returns <s generated />
 
-- [`Promise`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`Type`](https://www.typescriptlang.org/docs/handbook/2/generics.html)> <s generated />
+- [`Promise`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise)<[`Type`]( https://www.typescriptlang.org/docs/handbook/2/generics.html)> <s generated />
 
 <hr class="solid" /> <s generated />
