--- a/docs/docs/api/client/typescript/classes/key-by.mdx
+++ b/docs/docs/api/client/typescript/classes/key-by.mdx
@@ -1,18 +1,18 @@
 ---
-sidebar_position: 10
-title: By
+sidebar_position: 11
+title: KeyBy
 toc_max_heading_level: 4
 ---
 
-# By <s generated />
+# KeyBy <s generated />
 
-Class used by [Identifying GamiumObject](gamium/client/typescript/object-path).
+The class used to request keystrokes in [Game Controling](gamium/client/typescript/game-control)
 
 <hr class="solid" /> <s generated />
 
 ## Methods <s generated />
 
-### path <s generated />
+### unityKeyboard <s generated />
 
 <s childtag /> <code
   style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
@@ -22,12 +22,12 @@ Class used by [Identifying GamiumObject](gamium/client/typescript/object-path).
   children="static"
 /> <s generated />
 
-Use the Object Path to locate the object.
+The type used by projects with [Unity Input System]( https://docs.unity3d.com/Packages/com.unity.inputsystem@latest) to enter the keyboard.
 
 ##### Usage
 
 ```ts
-const cameraObj = await gamium.findObject(By.path('/Main Camera[1]'));
+await gamium.sendKey(KeyBy.unityKeyboard('Space'));
 ```
 
 <s childtag /> <code
@@ -48,17 +48,15 @@ const cameraObj = await gamium.findObject(By.path('/Main Camera[1]'));
 
 ##### Arguments <s generated />
 
-- str [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
-
-  - Enter 'Object path'.
+- key `keyof` `typeof` [`UnityKeyboard`](../enums/unity-keyboard) <s generated />
 
 ##### Returns <s generated />
 
-- [`By`](by) <s generated />
+- [`KeyBy`](key-by) <s generated />
 
 <hr class="solid" /> <s generated />
 
-### tag <s generated />
+### unityKeycode <s generated />
 
 <s childtag /> <code
   style={{ position: 'relative', top: '-20px', fontSize: '70%' }}
@@ -68,12 +66,12 @@ const cameraObj = await gamium.findObject(By.path('/Main Camera[1]'));
   children="static"
 /> <s generated />
 
-Use the Object Tag to locate the object.
+The type that is used for keyboard input in projects with [Unity Input Manager]( https://docs.unity3d.com/Manual/class-InputManager.html) .
 
 ##### Usage
 
 ```ts
-const cameraObj = await gamium.findObject(By.tag('MainCamera'));
+await gamium.sendKey(KeyBy.unityKeycode('Space'));
 ```
 
 <s childtag /> <code
@@ -94,19 +92,17 @@ const cameraObj = await gamium.findObject(By.tag('MainCamera'));
 
 ##### Arguments <s generated />
 
-- str [`string`]( https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String) <s generated />
-
-  - Enter 'Object Tag'.
+- code `keyof` `typeof` [`UnityKeyCode`](../enums/unity-key-code) <s generated />
 
 ##### Returns <s generated />
 
-- [`By`](by) <s generated />
+- [`KeyBy`](key-by) <s generated />
 
 <hr class="solid" /> <s generated />
 
 ## Properties <s generated />
 
-#### by [`ObjectLocatorBy`](../enums/object-locator-by) <s generated />
+#### by [`InputKeyBy`](../enums/input-key-by) <s generated />
 
 <hr class="solid" /> <s generated />
 
