--- a/docs/docs/api/client/typescript/classes/player.mdx
+++ b/docs/docs/api/client/typescript/classes/player.mdx
@@ -98,6 +98,6 @@ await player.refresh();
 
 ## Properties <s generated />
 
-#### info [`ObjectInfo`](object-info) <s generated />
+#### info [`ObjectInfo`](../types/object-info) <s generated />
 
 <hr class="solid" /> <s generated />
