--- a/docs/docs/api/client/typescript/classes/ui-element.mdx
+++ b/docs/docs/api/client/typescript/classes/ui-element.mdx
@@ -261,6 +261,6 @@ await okButton.waitInteractable();
 
 ## Properties <s generated />
 
-#### info [`ObjectInfo`](object-info) <s generated />
+#### info [`ObjectInfo`](../types/object-info) <s generated />
 
 <hr class="solid" /> <s generated />
