--- a/docs/docs/api/client/typescript/classes/ui.mdx
+++ b/docs/docs/api/client/typescript/classes/ui.mdx
@@ -8,7 +8,7 @@ toc_max_heading_level: 4
 
 <hr class="solid" /> <s generated />
 
-[UI Controling](../../ui) has a description. Class for easy UI manipulation.
+[UI Controling](gamium/client/ui) has a description. Class for easy UI manipulation.
 
 ## Methods <s generated />
 
