--- a/docs/docs/gamium/engine/unity/query-objects.mdx
+++ b/docs/docs/gamium/engine/unity/query-objects.mdx
@@ -3,7 +3,7 @@ sidebar_position: 2
 title: Using GamiumEditor
 ---
 
-This article describes how to understand the [`ObjectPath`](..//gamium-client/objectpath).
+This article describes how to understand the [`ObjectPath`](gamium/client/object-path).
 This allows you to write scripts in the `Gamium Client`.
 
 :::info
