--- a/docs/docs/gamium/client/object-path.mdx
+++ b/docs/docs/gamium/client/object-path.mdx
@@ -4,6 +4,9 @@ title: Query Object Path
 toc_max_heading_level: 4
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
 The 'Object path' is used by the 'Gamium Client' to query and manipulate the desired object.
 
 :::info
@@ -18,9 +21,15 @@ The Object Path can be found using the methods below.
 
 Below is an example of using 'Object path' in 'Gamium Client'.
 
+<Tabs groupId="language" defaultValue="ts">
+<TabItem value="ts" label="TypeScript" default> 
+
 ```ts
 const cameraObj = await gamium.findObject(By.path('/Main Camera[1]'));
 ```
+
+</TabItem>
+</Tabs>
 
 In the example above, we are looking for a camera using the 'Object path' called '/Main Camera [1]'. The reason for using the function [`By.path()`](api/client/typescript/classes/by) is to inform you that you are searching through 'Object path' among the object search methods.
 
@@ -28,6 +37,12 @@ In the example above, we are looking for a camera using the 'Object path' called
 
 Alternatively, you can find it using the tag as shown below.
 
+<Tabs groupId="language" defaultValue="ts">
+<TabItem value="ts" label="TypeScript" default> 
+
 ```ts
 const cameraObj = await gamium.findObject(By.tag('MainCamera'));
 ```
+
+</TabItem>
+</Tabs>
