--- a/docs/docs/gamium/client/rpc.mdx
+++ b/docs/docs/gamium/client/rpc.mdx
@@ -4,6 +4,9 @@ title: Trigger Remote Procedure Call
 toc_max_heading_level: 4
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
 The `Gamium Client`communicates with the`Gamium Engine` to remotely invoke the functions contained in the game.
 Before performing this action, check the supporting function through the guide first.
 
@@ -14,6 +17,9 @@ Before performing this action, check the supporting function through the guide f
 You can use [RpcBy](api/client/typescript/classes/rpc-by) by specifying the desired calling method.
 
 You can use it as below.
+
+<Tabs groupId="language" defaultValue="ts">
+<TabItem value="ts" label="TypeScript" default> 
 
 ```ts
 await gamium.executeRpc(
@@ -26,3 +32,6 @@ const property = await gamium.executeRpc(
   RpcBy.property('Gamium.Private.CodebaseSample', 'property'),
 );
 ```
+
+</TabItem>
+</Tabs>
