--- a/docs/docs/gamium/client/ui.mdx
+++ b/docs/docs/gamium/client/ui.mdx
@@ -4,6 +4,9 @@ title: Control UI
 toc_max_heading_level: 4
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
 You can obtain an object called [`UI`](api/client/typescript/classes/ui) through the [`Game Driver`](api/client/typescript/classes/gamium-client).
 [`UI`](api/client/typescript/classes/ui) provides an interface for easy UI manipulation.
 
@@ -11,18 +14,30 @@ You can use it as below.
 
 ##### Usage
 
+<Tabs groupId="language" defaultValue="ts">
+<TabItem value="ts" label="TypeScript" default> 
+
 ```ts
 const ui = gamium.ui();
 await ui.click(By.path('Object path'));
 ```
+
+</TabItem>
+</Tabs>
 
 ### Auto wait
 
 If you are using the class [`UI`](api/client/typescript/classes/ui), automatically do the [`wait`](api/client/typescript/classes/ui-element) until you find it.
 The above Usage works the same as below.
 
+<Tabs groupId="language" defaultValue="ts">
+<TabItem value="ts" label="TypeScript" default> 
+
 ```ts
 const button = await ui.wait(By.path('Object path'));
 await gamium.wait(Until.elementInteractable(button));
 await button.click();
 ```
+
+</TabItem>
+</Tabs>
