🚨 fixing docs build error

--- a/docs/docs/gamium/client/object-path.mdx
+++ b/docs/docs/gamium/client/object-path.mdx
@@ -12,8 +12,8 @@ The 'Object path' is used by the 'Gamium Client' to query and manipulate the des
 :::info
 The Object Path can be found using the methods below.
 
-- [`Console Inspector`](/host-and-device/device/streaming-and-remote-control/game-ui-inspector)
-- `Unity` - [`Gamium Editor`](../gamium-engine/unity/query-objects)
+- [`Console Inspector`](https://docs.dogutech.io/host-and-device/device/streaming-and-remote-control/game-ui-inspector)
+- `Unity` - [`Gamium Editor`](gamium/engine/unity/query-objects)
 
 :::
 
