--- a/docs/docs/gamium/client/write-testscript.mdx
+++ b/docs/docs/gamium/client/write-testscript.mdx
@@ -6,9 +6,9 @@ title: Write Test Script
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-The following elements are required to run the [`Gamium Client`](../introduction/#gamium-client).
+The following elements are required to run the [`Gamium Client`](../get-started/introduction/#gamium-client).
 
-- Game executable with [`Gamium Engine SDK`](../introduction/#gamium-engine)
+- Game executable with [`Gamium Engine SDK`](../get-started/introduction/#gamium-engine)
 - UI to be operated automatically, Object path of Object
 - [Object path](object-path) Document Reference
 
