--- a/docs/docs/gamium/engine/unity/query-objects.mdx
+++ b/docs/docs/gamium/engine/unity/query-objects.mdx
@@ -7,7 +7,7 @@ This article describes how to understand the [`ObjectPath`](gamium/client/object
 This allows you to write scripts in the `Gamium Client`.
 
 :::info
-The same functionality is available through the browser via the [`Console Inspector`](/host-and-device/device/streaming-and-remote-control/game-ui-inspector).
+The same functionality is available through the browser via the [`Console Inspector`](https://docs.dogutech.io/host-and-device/device/streaming-and-remote-control/game-ui-inspector).
 :::
 
 ## Using the GamiumEditor Window
